github_data_collector/src/data/issue_comment/moredip_Frank.txt
```
User-MacBook-Pro:~ user$ sudo gem install frank-cucumber
Building native extensions. This could take a while...
ERROR:  Error installing frank-cucumber:
	ERROR: Failed to build gem native extension.

    current directory: /Users/user.rvm/rubies/ruby-2.6.3/lib/ruby/gems/2.6.0/gems/json-1.8.1/ext/json/ext/generator
/Users/user/.rvm/rubies/ruby-2.6.3/bin/ruby -I /Users/user/.rvm/rubies/ruby-2.6.3/lib/ruby/2.6.0 -r ./siteconf20190425-19021-s115r2.rb extconf.rb
creating Makefile

current directory: /Users/user/.rvm/rubies/ruby-2.6.3/lib/ruby/gems/2.6.0/gems/json-1.8.1/ext/json/ext/generator
make "DESTDIR=" clean

current directory: /Users/user.rvm/rubies/ruby-2.6.3/lib/ruby/gems/2.6.0/gems/json-1.8.1/ext/json/ext/generator
make "DESTDIR="
compiling generator.c
In file included from generator.c:1:
./../fbuffer/fbuffer.h:175:47: error: too few arguments provided to function-like macro invocation
    VALUE result = rb_str_new(FBUFFER_PAIR(fb));
                                              ^
/Users/user.rvm/rubies/ruby-2.6.3/include/ruby-2.6.0/ruby/intern.h:814:9: note: macro 'rb_str_new' defined here
#define rb_str_new(str, len) RB_GNUC_EXTENSION_BLOCK(   \
        ^
In file included from generator.c:1:
./../fbuffer/fbuffer.h:175:11: warning: incompatible pointer to integer conversion initializing 'VALUE' (aka 'unsigned long') with an expression of type 'VALUE (const char *, long)' (aka 'unsigned long (const char *, long)') [-Wint-conversion]
    VALUE result = rb_str_new(FBUFFER_PAIR(fb));
          ^        ~~~~~~~~~~
generator.c:840:25: error: use of undeclared identifier 'rb_cFixnum'
    } else if (klass == rb_cFixnum) {
                        ^
generator.c:842:25: error: use of undeclared identifier 'rb_cBignum'
    } else if (klass == rb_cBignum) {
                        ^
1 warning and 3 errors generated.
make: *** [generator.o] Error 1

make failed, exit code 2

Gem files will remain installed in /Users/user/.rvm/rubies/ruby-2.6.3/lib/ruby/gems/2.6.0/gems/json-1.8.1 for inspection.
Results logged to /Users/user/.rvm/rubies/ruby-2.6.3/lib/ruby/gems/2.6.0/extensions/x86_64-darwin-18/2.6.0/json-1.8.1/gem_make.out

```
I am trying to launch frank on 2012 Olympics code build however getting the following error:- 

➜  2012 Olympics git:(master) ✗ frank launch  
WARN: Unresolved specs during Gem::Specification.reset:
      rake (>= 0)
WARN: Clearing out unresolved specs.
Please report a bug if this causes problems.
LAUNCHING APP...
/Library/Ruby/Gems/2.0.0/gems/sim_launcher-0.4.13/lib/sim_launcher/simulator.rb:104: warning: Insecure world writable dir /usr/share/node/js in PATH, mode 040777
sh: line 1:  6110 Trace/BPT trap: 5       /Library/Ruby/Gems/2.0.0/gems/sim_launcher-0.4.13/lib/sim_launcher/../../native/ios-sim "showsdks" 2>&1
sh: line 1:  6114 Segmentation fault: 11  /Library/Ruby/Gems/2.0.0/gems/sim_launcher-0.4.13/lib/sim_launcher/../../native/ios-sim "launch" "/Users/rohit/Documents/MEA/mauto/2012-Olympics-iOS--iPad-and-iPhone--source-code/2012 Olympics/Frank/frankified_build/Frankified.app" "--tall" "--retina" "--sdk" "--family" "iphone" "--exit" 2>&1

I also tried updating file simulator.rb with run_synchronous_command() as suggested in frank issue 272 however no luck:-
https://github.com/moredip/Frank/issues/272

PS: I am successfully able to complete steps before frank launch using steps at the following url:-
http://blog.thepete.net/blog/2012/06/24/writing-your-first-frank-test/

Appreciate any help so that I can execute launch and inspect frank commands please.

Regards
Rohit 

We built a Frankified version of our app in a "Test" configuration, not Debug configuration and after launching this Test-Frankified-app, the server connecting to Frank was not running and we cannot run tests with Cucumber.  

The Debug-Frankified version launches the server and runs Cucumber tests great.

We are trying to get Frank to run on our test-configuration since our debug configuration makes calls to outside services and has dynamic data.

Is there a way to run Frank with a non-Debug build configuration? 

Update the "moredip" repo README to indicate that it is not the official version, and you should instead use: https://github.com/TestingWithFrank/Frank/

Background:
https://groups.google.com/forum/#!topic/frank-discuss/Fv1rHzhS5P8

Added `wait_for_nothing_visible_to_be_animating` helper method which checks for views that are animating and are also `FEX_isVisible`.

This resolves the issues with the UIRefreshControl (Issue #266).

Just update xcode to 5.1, after that unable to launch the simulator.

Details: 

Frank Launch.

LAUNCHING APP...
sh: line 1: 44406 Trace/BPT trap: 5       /Library/Ruby/Gems/1.8/gems/sim_launcher-0.4.6/lib/sim_launcher/../../native/ios-sim "showsdks" 2>&1
sh: line 1: 44409 Trace/BPT trap: 5       /Library/Ruby/Gems/1.8/gems/sim_launcher-0.4.6/lib/sim_launcher/../../native/ios-sim "launch" "/Users/royt/practice/temp/Frank/frankified_build/Frankified.app" "--sdk" "" "--family" "iphone" "--exit" 2>&1

I believe this was caused by xcode 5.1, any change I could make on the Frank side to solve this problem? Thanks

I tried using Symbiote to Tap on the selector:
    view:'UISwitch' marked:'swtchWizard'
This ignored by the TI-Nspire app when running in an iPad Simulator. Direct Tap
with the mouse on this GUI element works fine. The GUI element is correctly
recognized by Frank.

All of this is best illustrated by the attached screenshot video (if I can figure out how to attach or reference a .mp4 file) in which I:
- Capture the iPad Simulator screen into Symbiote, running in Safari
- Tell Symbiote to highlight view:'UISwitch' marked:'swtchWizard' in its captured screenshot
- Tell Symbiote to flash view:'UISwitch' marked:'swtchWizard' in the iPad Simulator
- Tell Symbiote to Tap view:'UISwitch' marked:'swtchWizard' in the iPad Simulator
  - This is ignored
- Tap with the mouse on view:'UISwitch' marked:'swtchWizard' directly in the iPad Simulator
  - This works each time
- Tell Symbiote to Tap view:'UISwitch' marked:'swtchWizard' in the iPad Simulator again from ON to OFF
  - This is also ignored

Has anyone else experienced this bug with UISwitch GUI elements in other apps?

Hi everybody!
I try to click button after my view controller animated , but it's not working , and this is errors:
   `When I touch on the "menu icon" button after animate        # Frank/features/step_definitions/frank_steps.rb:77
      frankly_map button marked:'menu icon' touch failed because: encountered error while attempting to perform touch on selected elements
      View not touched because it would not be the recipient of the touch event - consider FEX_forcedTouch instead (touch recipient: 0x989cef0#UIView) (RuntimeError)
      ./Frank/features/step_definitions/frank_steps.rb:81:in /^I touch on the "([^\"]*)" button after animate$/'
      Frank/features/main.feature:213:in 'When I touch on the "menu icon" button after animate'`

And this is my custom frank step:
  `
When /^I touch on the "([^\"]*)" button after animate$/ do |mark|
      wait_for_nothing_to_be_animating
      selector = "button marked:'#{mark}'"
      if check_element_exists(selector)
        touch(selector)
      end
   end
`
please help me !!!!

I got this error message when running **frank setup**,

``` bash
create ....(many other stuffs)
create  Frank/plugins
/Users/aoopvn/.rvm/gems/ruby-2.0.0-p0/gems/frank-cucumber-1.2.2/lib/frank-cucumber/frankifier.rb:66:in `decide_on_project': private method `open' called for Xcodeproj::Project:Class (NoMethodError)
    from /Users/aoopvn/.rvm/gems/ruby-2.0.0-p0/gems/frank-cucumber-1.2.2/lib/frank-cucumber/frankifier.rb:21:in `frankify!'
    from /Users/aoopvn/.rvm/gems/ruby-2.0.0-p0/gems/frank-cucumber-1.2.2/lib/frank-cucumber/frankifier.rb:9:in `frankify!'
    from /Users/aoopvn/.rvm/gems/ruby-2.0.0-p0/gems/frank-cucumber-1.2.2/lib/frank-cucumber/cli.rb:48:in `setup'
    from /Users/aoopvn/.rvm/gems/ruby-2.0.0-p0/gems/thor-0.17.0/lib/thor/task.rb:27:in `run'
    from /Users/aoopvn/.rvm/gems/ruby-2.0.0-p0/gems/thor-0.17.0/lib/thor/invocation.rb:120:in `invoke_task'
    from /Users/aoopvn/.rvm/gems/ruby-2.0.0-p0/gems/thor-0.17.0/lib/thor.rb:344:in `dispatch'
    from /Users/aoopvn/.rvm/gems/ruby-2.0.0-p0/gems/thor-0.17.0/lib/thor/base.rb:434:in `start'
    from /Users/aoopvn/.rvm/gems/ruby-2.0.0-p0/gems/frank-cucumber-1.2.2/bin/frank:5:in `<top (required)>'
    from /Users/aoopvn/.rvm/rubies/ruby-2.0.0-p0/bin/frank:23:in `load'
    from /Users/aoopvn/.rvm/rubies/ruby-2.0.0-p0/bin/frank:23:in `<main>'
```

It does not work either with **frank setup** or **bundle exec frank setup** (with a Gemfile), already [got this](https://groups.google.com/forum/#!topic/frank-discuss/a2WOyCzURwc) 
Here my dev env:
- Mac Mavericks 10.9.1
- Xcode 5.0.2
- ruby 2.0
- frank-cucumber-1.2.2

``` bash
gem update --system
Latest version currently installed.
```

Thanks a lot for your support.

# Issue

 `UIRefreshControl` is continuously animating, even when it is not visible. This causes `wait_for_nothing_to_be_animating` to fail.

Frank console reveals that the erroneous view is in fact the private UIKit view `_UIRefreshControlModernReplicatorView` which continues to animate off screen.

I'm happy to look into this. I've included a repo to demonstrate the issue.
# Replication Repo

https://github.com/samst0r/UIRefreshControlFrank
